# prompt-automation

./: .gitignore  CHANGELOG.md  CODEBASE_REFERENCE.md  CONTRIBUTING.md  INSTALLATION_TROUBLESHOOTING.md  LICENSE  MANIFEST.in  PYTHON_TROUBLESHOOTING.md  README.md  REFRACTOR_AGENT_PROMPT.md  design.md  espanso.deb  local.secrets.psd1.example  mypy.ini  plan.md  pyproject.toml  review.md  tasks.py  test_consolidation.py
.github/: copilot-instructions.md
.pa_home/: gui-settings.json  placeholder-overrides.json
PromptPilot/: LICENSE  README.md  pyproject.toml  tasks.py
PromptPilot/.github/workflows/: ci.yml
PromptPilot/prompts/styles/Planning/: 01_basic.json
PromptPilot/prompts/styles/Summarizer/: 01_basic.json
PromptPilot/prompts/styles/Troubleshooting/: 01_basic.json
PromptPilot/scripts/: install.ps1  install.sh
PromptPilot/src/promptpilot/: __init__.py  cli.py  logger.py  menus.py  paste.py  renderer.py  variables.py
PromptPilot/src/promptpilot/hotkey/: macos.applescript
PromptPilot/src/promptpilot/resources/: banner.txt
PromptPilot/tests/: test_create.py  test_json_schema.py  test_loading.py  test_new_template.py  test_placeholder_dialog.py  test_renderer.py
docs/: CODEBASE_REFERENCE.md  ESPANSO_FIRST_RUN.md  ESPANSO_PACKAGE.md  ESPANSO_REMOTE_FIRST.md  HOTKEYS.md  INSTALLATION_TROUBLESHOOTING.md  PARITY_SPEC.md  PYTHON_TROUBLESHOOTING.md  REMINDERS.md  SINGLE_WINDOW_KB.md  SINGLE_WINDOW_PARITY_STATUS.md  THEME_EXTENSION_GUIDE.md  TODOIST_NTSK.md  UNINSTALL.md  VARIABLES_REFERENCE.md  recent_history.md
espanso-package/: _manifest.yml  package.yml
install/: install-alternative.ps1  install-dependencies.ps1  install-dev.ps1  install-prompt-automation.ps1  install-wsl-compatible.ps1  install.ps1  install.sh  utils.ps1
scripts/: add_espanso_snippet.py  add_share_flag.py  diagnose-python.ps1  espanso-package-runbook.sh  espanso-windows.ps1  espanso.sh  fix-path.ps1  install-dependencies.ps1  install-prompt-automation.ps1  install-windows-gui.bat  install-windows-gui.ps1  install-wsl-compatible.ps1  install.ps1  install.sh  release.py  test-detection.ps1  test-gui.py  todoist_add.ps1  troubleshoot-hotkeys.ps1  utils.ps1
snapshots/: ledger.json
tests/: conftest.py  test_assign_hotkey.py  test_background_hotkey.py  test_background_hotkey_startup.py  test_cli_list.py  test_consolidation.py  test_db_rotation.py  test_espanso_prune_defaults.py  test_install_scripts.py  test_json_schema.py  test_menu_sort.py  (+8 more)
(+286 files in other folders)
