[project]
name = "prompt-automation"
version = "0.2.0"
description = "Keyboard-only smart prompt launcher"
requires-python = ">=3.11"
authors = [{name="prompt-automation"}]
dependencies = [
    "pyperclip",
    "keyboard; platform_system=='Windows'"
]

[project.scripts]
prompt-automation = "prompt_automation.cli:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = ""

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prompt_automation = ["resources/*", "hotkey/*"]
