[project]
name = "promptpilot"
version = "0.1.0"
description = "Keyboard-only smart prompt launcher"
requires-python = ">=3.11"
authors = [{name="PromptPilot"}]

[project.scripts]
promptpilot = "promptpilot.cli:main"

[tool.ruff]
line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
